[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-nlm-cuda"
dynamic = ["version"]
description = "Non-local means denoise filter in CUDA, drop-in replacement of the KNLMeansCL for VapourSynth"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WolframRhodium" }]
maintainers = [
    { name = "WolframRhodium" },
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
]
dependencies = ["vapoursynth>=74"]

[dependency-groups]
dev = ["hatchling>=1.27.0", "packaging"]

[project.urls]
"Source Code" = "https://github.com/AmusementClub/vs-nlm-cuda"
"Bug Tracker" = "https://github.com/AmusementClub/vs-nlm-cuda/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^v(?P<version>.*)$'

[tool.hatch.build.targets.sdist]
include = ["source", "CMakeLists.txt"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/**/*.so",
    "vapoursynth/plugins/**/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
